<resources>
    <string name="app_name">炸金花</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_login">炸金花</string>
    <string name="toast_services_start_title">炸金花正在运行</string>
    <string name="toast_services_start_content">保持服务器连接中</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="title_activity_main">主页</string>

    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="cannot_connect_to_server">无法连接至服务器</string>
    <string name="privacy_title">隐私政策和免责声明</string>
    <string name="privacy">
        ◆ 隐私政策\n
        我们将保护您的隐私，隐藏真实IP地址，不保存任何日志，使用加密技术传输您的流量，让您实现真正的匿名访问。\n
        ◆ 免责声明\n
        使用本软件的同时，请严格遵守您所在国家、地区的法律法规。\n
        我们的软件仅供科研,学习,教育,等一切合法目的使用。\n
        严禁一切违反您所在国家、地区及服务器所在国法律的行为。\n
        使用本软件将被视为对本声明全部内容的认可。</string>
    <string name="downloadUrl">电脑版下载地址(点击复制):</string>
    <string name="vipTime">Vip到期时间:</string>
    <string name="mine">我</string>
    <string name="chooseLocation">选择节点</string>
    <string name="connect">已断开\n点击连接</string>
    <string name="currentLocationNoChoice">当前选择节点: 未选择</string>
    <string name="agree">同意</string>
    <string name="disagree">放弃使用</string>
    <string name="message">公告</string>
    <string name="neverShow">不再显示</string>
    <string name="admit">确定</string>
    <string name="pleaseUse">请使用</string>
    <string name="pay">支付</string>
    <string name="tip">有问题请反馈至邮箱: 1695966745@qq.com</string>
    <string name="signInLabel">每日签到</string>
    <string name="main">首页</string>
    <string name="shareTitle">将炸金花分享给朋友</string>
    <string name="shareContent">炸金花下载地址:</string>
    <string name="pwdAgain">再次输入密码:</string>
    <string name="pwd">密码:</string>
    <string name="back">返回</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="passwordCanNotEnter">密码(可不用填)</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="error">错误</string>
    <string name="loggingIn">登录中</string>
    <string name="usernameOrPasswordWrongInFormat">用户名或密码格式错误</string>
    <string name="usernameOrPasswordWrong">用户名或密码错误</string>
    <string name="downloadingUpdate">正在下载更新中</string>
    <string name="checkingUpdate">正在检测是否要更新</string>
    <string name="user">用户名:</string>
    <string name="emailWord">邮箱:</string>
    <string name="verificationCode">验证码:</string>
    <string name="getVerificationCode">获取验证码</string>
    <string name="admitRegister">确定注册</string>
    <string name="backLogin">返回登录</string>
    <string name="userRegister">账号注册</string>
    <string name="incorrectDataFormat">数据格式有误</string>
    <string name="alreadyRegisteredUsername">此用户名已注册</string>
    <string name="alreadyRegisteredEmail">此邮箱已注册</string>
    <string name="needVerificationCode">需要验证码</string>
    <string name="verificationCodeWrong">验证码错误</string>
    <string name="unableToParseReturnData">无法解析返回数据</string>
    <string name="verificationCodeWrongInFormat">验证码格式错误</string>
    <string name="emailWrongInFormat">邮箱格式错误，现只支持通用邮箱</string>
    <string name="passwordDifferent">密码不一致</string>
    <string name="waitCode1">请等待</string>
    <string name="waitCode2">秒后重新发送验证码</string>
    <string name="copySuccess">已复制下载地址</string>
    <string name="disconnect">已连接\n点击断开</string>
    <string name="signInSuccess">签到成功</string>
    <string name="notLoggedIn">未登录</string>
    <string name="alreadySignInTitle">已签到，是否购买Vip</string>
    <string name="alreadySignInContent">今日已签到，请明天再来或购买Vip</string>
    <string name="currentLocation">当前选择节点:</string>
    <string name="addTime1">(体验线路</string>
    <string name="addTime2">)</string>
    <string name="cantUseThisLocation">暂时无法连接该节点，试试其他节点</string>
    <string name="vipLocation">Vip线路</string>
    <string name="vipLocationContent">这是Vip专享线路，是否购买Vip？</string>
    <string name="chooseANode">请选择一个节点</string>
    <string name="vipOverTime">Vip已到期</string>
    <string name="vipOverTimeContent">您的Vip已到期，是否现在充值</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="vpnDisabled">您已禁用vpn权限</string>
    <string name="overTime">已到期</string>
    <string name="versionText">版本: </string>
    <string name="autoConnect">启动时自动连接</string>
    <string name="buyVIP">购买Vip</string>
    <string name="share">分享</string>
    <string name="changePassword">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="pleasePay">请支付</string>
    <string name="pleaseWaitQRCode">请等待二维码出现</string>
    <string name="iPaid">我已支付</string>
    <string name="usernameOrEmail">用户名或邮箱:</string>
    <string name="forgetOrChangePassword">忘记/修改密码</string>
    <string name="changeSuccess">修改成功</string>
    <string name="changeSuccessContent">修改密码已成功</string>
    <string name="userNotExist">用户不存在</string>
    <string name="checkVersion">检查更新</string>
    <string name="upToDate">已是最新版本</string>
    <string name="newVersion">有新版本</string>
    <string name="version">版本</string>
    <string name="content">内容</string>
    <string name="toUpdate">是否更新？</string>
    <string name="neverShowVersionDialog">本版本不再提示</string>
    <string name="settings">设置</string>
    <string name="chose">已选择</string>
    <string name="howToUse">如何使用?</string>
    <string name="adSignIn">看广告加时长</string>
    <string name="loadAdFailed">加载视屏失败</string>
    <string name="rewardedAdFailedToShow">播放视频失败</string>
    <string name="forceUpdate">必须更新，否则将退出。 </string>
    <string name="floating">悬浮按钮</string>
    <string name="switchConnect">连接</string>
    <string name="switchDisconnect">断开</string>
    <string name="floatingButtonHide">悬浮按钮已隐藏</string>
    <string name="floatingButtonHideClearly">悬浮按钮在长按后已隐藏，在设置中重新打开</string>
    <string name="floatDisabled">悬浮已禁用</string>
    <string name="floatingMessage">长按以隐藏悬浮按钮</string>
    <string name="floating_btn">悬浮按钮(长按可关闭)</string>
    <string name="enter">加入</string>
    <string name="create_room">创建房间</string>
    <string name="money">豆子</string>
    <string name="name">名称</string>
    <string name="description">描述</string>
    <string name="exit">退出</string>
    <string name="have">要</string>
    <string name="throw_cards">弃牌</string>
    <string name="look_cards">看牌</string>
    <string name="money_on_desk">桌面上的豆子:</string>
    <string name="ready">准备</string>
    <string name="enter_password">请输入密码</string>
    <string name="password_cannot_be_null">密码不能为空</string>
    <string name="room_title">房间标题</string>
    <string name="room_description">房间描述</string>
    <string name="enter_properly">请正确输入名称和描述</string>
    <string name="vpn_tip">有问题请反馈至邮箱：1695966745@qq.com</string>
</resources>