<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RoomsActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/id_toolbar"
        app:title="@string/app_name"
        app:menu="@menu/more"
        app:subtitle="@string/title_activity_main"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <TextView
        android:id="@+id/money_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money"/>

    <Button
        android:id="@+id/create_room_button"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_room"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".ui.RoomsActivity">

        <ScrollView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ListView
                android:id="@+id/room_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </ScrollView>

        <Button
            android:id="@+id/pcUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/downloadUrl"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>