<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/id_toolbar"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/left"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_marginTop="60dp"
            android:id="@+id/reg_number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/user"
            android:textColor="#000"
            android:textSize="20dp" />
        <EditText
            android:layout_alignBottom="@+id/reg_number1"
            android:layout_toRightOf="@+id/reg_number1"
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />
        <TextView
            android:id="@+id/reg_number2"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_number1"
            android:padding="10dp"
            android:text="@string/pwd"
            android:textColor="#000"
            android:textSize="20dp" />
        <EditText
            android:layout_alignBottom="@id/reg_number2"
            android:layout_toRightOf="@+id/reg_number2"
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="10dp" />
        <TextView
            android:id="@+id/reg_number3"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_number2"
            android:padding="10dp"
            android:text="@string/pwdAgain"
            android:textColor="#000"
            android:textSize="20dp" />
        <EditText
            android:layout_alignBottom="@id/reg_number3"
            android:layout_toRightOf="@+id/reg_number3"
            android:id="@+id/reg_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="10dp" />
        <TextView
            android:id="@+id/reg_number4"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_number3"
            android:padding="10dp"
            android:text="@string/emailWord"
            android:textColor="#000"
            android:textSize="20dp" />
        <EditText
            android:layout_alignBottom="@id/reg_number4"
            android:layout_toRightOf="@+id/reg_number4"
            android:id="@+id/reg_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />
        <TextView
            android:id="@+id/reg_number5"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_number4"
            android:padding="10dp"
            android:text="@string/verificationCode"
            android:textColor="#000"
            android:textSize="20dp" />
        <EditText
            android:layout_alignBottom="@id/reg_number5"
            android:layout_toRightOf="@+id/reg_number5"
            android:id="@+id/reg_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />
        <TextView
            android:id="@+id/reg_errnoMessage"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_number5"
            android:padding="10dp"
            android:text="@string/error"
            android:visibility="invisible"
            android:textColor="@color/red"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getVerificationCode"
            android:background="@color/darkCyan"
            android:layout_marginTop="30dp"
            android:id="@+id/reg_btn_code"
            android:layout_below="@+id/reg_errnoMessage"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admitRegister"
            android:background="#74e674"
            android:layout_marginTop="15dp"
            android:id="@+id/reg_btn_sure"
            android:layout_below="@id/reg_btn_code"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backLogin"
            android:background="#f27758"
            android:layout_marginTop="15dp"
            android:id="@+id/reg_btn_login"
            android:layout_below="@id/reg_btn_sure"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userRegister"
            android:textSize="30dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>
</LinearLayout>