<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RoomsActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/id_toolbar"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/left"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/room_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_title"/>

            <TextView
                android:id="@+id/room_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_description"/>

        </LinearLayout>

        <com.mj.poker.ui.compomnets.HorizontalListView
            android:id="@+id/horizon_listview"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="5dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/readyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ready" />

            <TextView
                android:id="@+id/totalMoneyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:textSize="18sp"
                android:text="@string/money_on_desk" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/lookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/look_cards"
                android:textSize="18sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/throwButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/throw_cards"
                android:textSize="18sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/haveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/have"
                android:textSize="18sp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/card1ImageView"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/card2ImageView"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:layout_marginStart="18dp"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/card3ImageView"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:layout_marginStart="18dp"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>