<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:leon="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/id_toolbar"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/left"
        app:subtitle="@string/settings"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"/>

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/darkCyan"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="25sp"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/back"
            android:layout_width="43dp"
            android:layout_height="32dp"
            android:background="@drawable/left"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"/>
    </RelativeLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#fff"
        android:gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/user"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="username"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/settings_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_info">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.leon.lib.settingview.LSettingItem
                    android:id="@+id/autoLoginSwift"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    leon:leftIcon="@drawable/auto_login"
                    leon:rightStyle="iconSwitch"
                    leon:leftText="@string/autoLogin" />

                <com.leon.lib.settingview.LSettingItem
                    android:id="@+id/choosePayType"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    leon:leftIcon="@drawable/buy"
                    android:visibility="invisible"
                    leon:leftText="@string/buyVIP" />

                <com.leon.lib.settingview.LSettingItem
                    android:id="@+id/share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    leon:leftIcon="@drawable/share"
                    leon:leftText="@string/share" />

                <com.leon.lib.settingview.LSettingItem
                    android:id="@+id/changePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    leon:leftIcon="@drawable/change_password"
                    leon:leftText="@string/changePassword" />

                <com.leon.lib.settingview.LSettingItem
                    android:id="@+id/checkVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    leon:leftIcon="@drawable/check_updates"
                    leon:leftText="@string/checkVersion" />

                <com.leon.lib.settingview.LSettingItem
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    leon:leftIcon="@drawable/logout"
                    leon:leftText="@string/logout" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottom_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/versionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="version"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tipText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:padding="10dp"
                android:text="@string/tip"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>